--- a/NuGetPackageManagerUI/NuGetPackageManagerUI.csproj
+++ b/NuGetPackageManagerUI/NuGetPackageManagerUI.csproj
@@ -84,44 +84,44 @@
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Commands">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Commands.dll</HintPath>
+    <Reference Include="NuGet.Commands, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Commands.5.4.0\lib\net472\NuGet.Commands.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Common">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Common.dll</HintPath>
+    <Reference Include="NuGet.Common, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Common.5.4.0\lib\net472\NuGet.Common.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Configuration">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Configuration.dll</HintPath>
+    <Reference Include="NuGet.Configuration, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Configuration.5.4.0\lib\net472\NuGet.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Credentials">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Credentials.dll</HintPath>
+    <Reference Include="NuGet.Credentials, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Credentials.5.4.0\lib\net472\NuGet.Credentials.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.DependencyResolver.Core">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.DependencyResolver.Core.dll</HintPath>
+    <Reference Include="NuGet.DependencyResolver.Core, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.DependencyResolver.Core.5.4.0\lib\net472\NuGet.DependencyResolver.Core.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Frameworks">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Frameworks.dll</HintPath>
+    <Reference Include="NuGet.Frameworks, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Frameworks.5.4.0\lib\net472\NuGet.Frameworks.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.LibraryModel">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.LibraryModel.dll</HintPath>
+    <Reference Include="NuGet.LibraryModel, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.LibraryModel.5.4.0\lib\net472\NuGet.LibraryModel.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.PackageManagement">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.PackageManagement.dll</HintPath>
+    <Reference Include="NuGet.PackageManagement, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.PackageManagement.5.4.0\lib\net472\NuGet.PackageManagement.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Packaging">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Packaging.dll</HintPath>
+    <Reference Include="NuGet.Packaging, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Packaging.5.4.0\lib\net472\NuGet.Packaging.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.ProjectModel">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.ProjectModel.dll</HintPath>
+    <Reference Include="NuGet.ProjectModel, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.ProjectModel.5.4.0\lib\net472\NuGet.ProjectModel.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Protocol">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Protocol.dll</HintPath>
+    <Reference Include="NuGet.Protocol, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Protocol.5.4.0\lib\net472\NuGet.Protocol.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Resolver">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Resolver.dll</HintPath>
+    <Reference Include="NuGet.Resolver, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Resolver.5.4.0\lib\net472\NuGet.Resolver.dll</HintPath>
     </Reference>
-    <Reference Include="NuGet.Versioning">
-      <HintPath>..\..\..\Git\NuGet.Client\artifacts\NuGet.PackageManagement\16.0\bin\Debug\net472\NuGet.Versioning.dll</HintPath>
+    <Reference Include="NuGet.Versioning, Version=5.4.0.3, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\NuGet.Versioning.5.4.0\lib\net472\NuGet.Versioning.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
